:Refactor: Alteração das listas não aordemandas por tabelas

--- a/main.html
+++ b/main.html
@@ -21,23 +21,34 @@
     </div>
     <div>
         <h2><span style="color: brown;">Personagens</span></h2>
-        <ul>
-            <li><a href="pages/deku.html">Deku</a><br><img src="imgs/Deku.png" alt="imagem do Deku" width="21%"></li>
-            <li><a href="pages/bakugo.html">Bakugo</a><br><img src="imgs/Bakugo3.png" alt="imagem do Bakugo" width="21%"></li>
-            <li><a href="pages/todoroki.html">Todoroki</a><br><img src="imgs/Todoroki.png" alt="imagem do Todoroki" width="21%"></li>
-            <li><a href="pages/uraraka.html">Uraraka</a><br><img src="imgs/Uraraka.png" alt="imagem do Uraraka" width="21%"></li>
-            <li><a href="pages/Iida.html">Iida</a><br><img src="imgs/Iida.png" alt="imagem do Iida" width="21%"></li>
-        </ul>
+            <table border="1">
+                <tr>
+                    <td><a href="pages/deku.html">Deku</a></td>
+                    <td><a href="pages/bakugo.html">Bakugo</a></td>
+                    <td><a href="pages/todoroki.html">Todoroki</a></td>
+                    <td><a href="pages/uraraka.html">Uraraka</a></td>
+                    <td><a href="pages/Iida.html">Iida</a></td>
+                </tr>
+                <tr>
+                    <td><img src="imgs/Deku.png" alt="imagem do Deku" width="100"></td>
+                    <td><img src="imgs/Bakugo3.png" alt="imagem do Bakugo" width="100"></td>
+                    <td><img src="imgs/Todoroki.png" alt="imagem do Todoroki" width="100"></td>
+                    <td><img src="imgs/Uraraka.png" alt="imagem do Uraraka" width="100"></td>
+                    <td><img src="imgs/Iida.png" alt="imagem do Iida" width="100"></td>
+                </tr>
+            </table>
     </div>
     <div>
         <h2><span style="color: brown;">Habilidades</span></h2>
-        <ul>
-            <li><a href="quirks/one-for-all.html">One for All</a></li>
-            <li><a href="quirks/explosion.html">Explosion</a></li>
-            <li><a href="quirks/half-cold-half-hot.html">Half Cold Half Hot</a></li>
-            <li><a href="quirks/zero-gravity.html">Zero Gravity</a></li>
-            <li><a href="quirks/engine.html">Engine</a></li>
-        </ul>
+        <table border="1">
+            <tr>
+                <td><a href="quirks/one-for-all.html">One for All</a></td>
+                <td><a href="quirks/explosion.html">Explosion</a></td>
+                <td><a href="quirks/half-cold-half-hot.html">Half Cold Half Hot</a></td>
+                <td><a href="quirks/zero-gravity.html">Zero Gravity</a></td>
+                <td><a href="quirks/engine.html">Engine</a></td>
+            </tr>
+        </table>
     </div>
     
 </body>
